--- a/html/css/master.css
+++ b/html/css/master.css
@@ -10,14 +10,39 @@
 p {
     font-family: Tahoma, Geneva, sans-serif;
     font-size: 1.1 em;
+    text-align: justify;
     margin: 2%;
     color: #223840;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: Georgia, serif;
-    padding: 2%;
-    font-size: 3em;
-    font-weight: 800;
+    text-align: center;
     color: #223840;
+    line-height: .7em;
+}
+
+h1, h2 {
+    font-size: 2.7em;
+    font-weight: 800;
+}
+
+h3 {
+    font-size: 2.1em;
+    font-weight: 700;
+}
+
+h4 {
+    font-size: 1.9em;
+    font-weight: 600;
+}
+
+h5 {
+    font-size: 1.5em;
+    font-weight: 600;
+}
+
+h6 {
+    font-size: 1.3em;
+    font-weight: 600;
 }
