--- a/html/css/master.css
+++ b/html/css/master.css
@@ -1,5 +1,4 @@
 * {
-    background-color: #A9BCC2;
     font-size: 100%;
     top: 0;
     bottom: 0;
@@ -7,19 +6,26 @@
     right: 0;
 }
 
-p {
+body {
     font-family: Tahoma, Geneva, sans-serif;
-    font-size: 1.1 em;
-    text-align: justify;
-    margin: 2%;
-    color: #223840;
+    color: #043c2e;
+    background-image: url("background.jpg");
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-h1, h2, h3, h4, h5, h6 {
+p {
+    font-size: 1.1 em;
+    text-align: justify;
+    margin: 0 3% 1% 3%;
+}
+
+h1, h2, h3, h4 {
     font-family: Georgia, serif;
     text-align: center;
-    color: #223840;
-    line-height: .7em;
+    line-height: .3em;
+    padding: 0;
 }
 
 h1, h2 {
@@ -33,24 +39,104 @@ h3 {
 }
 
 h4 {
-    font-size: 1.9em;
-    font-weight: 600;
-}
-
-h5 {
     font-size: 1.5em;
     font-weight: 600;
 }
 
-h6 {
-    font-size: 1.3em;
-    font-weight: 600;
+h1.myName {
+    color: #cff2d4;
+    text-align: left;
+    display: inline-block;
+    float: left;
+    margin: 2% 0 2% 3%;
+}
+
+h3.keyword {
+    color: #cff2d4;
+    text-align: left;
+    display: inline-block;
+    float: right;
+    margin: 2% 4% 2% 0;
+}
+
+header {
+    background-color: #204354;
+    /*#121C3A; #3A1230; /*#224c3c; /*#154136; /*#00374c; /*#146c80; /*#36a489; /*#2f9148;*/
+    position: fixed;
+    width: 100%;
+    height: 22%;
+}
+
+#hidden_header {
+    width: 100%;
+    height: 30%;
+    visibility: hidden;
+}
+
+main {
+    background-color: #7ad5d6; /*#7de0cb; /*#7ad5d6; #B1DDDE*/
+    border: 5px solid #043c2e;
+    width: 50%;
+    height: 50%;
+    margin: 2% 22%;
+    padding: 3%;
+}
+
+footer {
+    display: none;
+    background-color: #154136;
+    color: #cff2d4;
+    width: 100%;
+    height: 6%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+}
+
+table#labs {
+    width: 80%;
+    border-collapse: collapse;
+    border: 3px solid #324D28;
+    margin: 0 10%;
+}
+
+#labs td, #labs th {
+    text-align: center;
+    border: 1px solid #324D28;
+}
+
+table#resume {
+    width: 95%;
+    border-collapse: collapse;
+    border: 3px solid #324D28;
+    margin: 0 5%;
+    padding: 2%;
+}
+
+#resume td, #resume th {
+    text-align: left;
+    font-size: .7em;
+    padding-left: 2%;
+}
+
+#resume th {
+    font-size: .8em;
+    vertical-align: top;
+}
+
+#acclaim {
+    display:block;
+    margin 0 auto;
+    text-align: center;
+    margin-top: 10%;
 }
 
 div#navbar ul {
 	list-style-type: none;
 	padding: 0;
-    margin: 0 0 0 2%;
+    margin: 0 0 0 3%;
 }
 
 div#navbar ul li {
@@ -65,22 +151,26 @@ a {
     background-color: inherit;
 }
 
+div#navbar {
+    clear: both;
+}
+
 div#navbar ul li a  {
 	font-family: Georgia, Times, serif;
-	font-weight: bold;
+    font-weight: 600;
 	font-size: 1.2em;
 	text-decoration: none;
-    color: #E9F0F2;
+    color: #cff2d4;
 }
 
 li.colorButton {
-	background-color: #223840;
+	background-color:  #1C123A; /*#1C123A /*#1f0838; /*#223840;*/
 }
 
 li.colorButton:hover {
-	background-color: #392240;
+	background-color: #4B2054;/*#121C3A/*#4e148d /*#392240;*/
 }
 
 li.colorButton:active {
-	background-color: #402A22;
+	background-color: #295420 /*#213808; /*#402A22;*/
 }
