--- a/html/app/appModule/resume/resume.component.html
+++ b/html/app/appModule/resume/resume.component.html
@@ -39,7 +39,7 @@
         <th colspan="4"></th>
     </tr>
     <tr>
-        <th rowspan="11">Skills</th>
+        <th rowspan="12">Skills</th>
         <th></th>
         <th></th>
         <th></th>
@@ -56,7 +56,10 @@
         <td colspan="3">SQL using mySQL, JPQL, JDBC, Database design</td>
     </tr>
     <tr>
-        <td colspan="3">HTML, CSS, XML, EL, JSP, Javascript, JQuery, Some Photoshop</td>
+        <td colspan="3">Javascript, JQuery, Ajax, Angularjs</td>
+    </tr>
+    <tr>
+        <td colspan="3">HTML, CSS, XML, EL, JSP, Some Photoshop</td>
     </tr>
     <tr>
         <td colspan="3">MS Windows, Mac OS, Linux command line</td>
