updating about and order of labs

--- a/html/app/appModule/labs/labs.component.html
+++ b/html/app/appModule/labs/labs.component.html
@@ -6,6 +6,16 @@
             <th>App Link</th>
         </tr>
         <tr>
+            <td>Angular To Do List</td>
+            <td><a href="https://github.com/Meira1427/AngularTodo" target="_blank">Todo on GitHub</a></td>
+            <td><a href="http://18.220.194.202:8080/ngTodo/" target="_blank">Angular To Do</a></td>
+        </tr>
+        <tr>
+            <td>MVC Crud</td>
+            <td><a href="https://github.com/Meira1427/MVCCRUDProject" target="_blank">Task List on GitHub</a></td>
+            <td><a href="http://18.220.194.202:8080/MVCCRUDProject/" target="_blank">Task List</a></td>
+        </tr>
+        <tr>
             <td>Midterm - Family Slack</td>
             <td><a href="https://github.com/jmeaster1/Flak" target="_blank">Flak Project on Github</td>
             <td><a href="http://18.220.194.202:8080/Flak" target="_blank">Flak Project</a></td>
@@ -19,11 +29,6 @@
             <td>Blackjack Gradle</td>
             <td><a href="https://github.com/Meira1427/BlackjackWebApp.git" target="_blank">Blackjack Web App on GitHub</a></td>
             <td><a href="http://18.220.194.202:8080/BlackjackGradleApp/" target="_blank">Blackjack Web App</a></td>
-        </tr>
-        <tr>
-            <td>MVC Crud</td>
-            <td><a href="https://github.com/Meira1427/MVCCRUDProject" target="_blank">Task List on GitHub</a></td>
-            <td><a href="http://18.220.194.202:8080/MVCCRUDProject/" target="_blank">Task List</a></td>
         </tr>
         <tr>
             <td>US Presidents</td>
